# safeup

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  install.ps1  install.sh
.github/workflows/: master.yml  pr.yml  release.yml  version_bump.yml
resources/: default_bashrc  latest_release_response_body.json  release_with_invalid_tag_name.json  release_with_no_assets_response_body.json  releases_response_body.json  sn_cli_release_missing_asset_response_body.json  sn_cli_release_response_body.json  sn_node_release_missing_asset_response_body.json  sn_node_release_response_body.json  sn_testnet_release_missing_asset_response_body.json  sn_testnet_release_response_body.json
src/: cmd.rs  github.rs  install.rs  main.rs  s3.rs  update.rs
