[package]
name = "safeup"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "safeup"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
color-eyre = "0.6.2"
dirs-next = "2.0.0"
flate2 = "1.0"
indicatif = "0.17.3"
indoc = "2.0.1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tar = "0.4"
tokio = { version = "1.26", features = ["full"] }

[target.'cfg(unix)'.dependencies]
users = "0.11"

[dev-dependencies]
assert_fs = "~1.0"
httpmock = "0.6"
predicates = "2.0"
